# codebreaker

./: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  tetragraphs.csv  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: cracker.cpp  cracker.hpp  main.cpp
test/: CMakeLists.txt
test/source/: codebreaker_test.cpp
